--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -33,6 +33,11 @@ changelog:
       - "^docs:"
       - "^test:"
 
+release:
+  extra_files:
+    - glob: "./dist/*.nupkg"
+    - glob: "./dist/**/*.yaml"
+
 brews:
   - repository:
       owner: frostyeti
@@ -68,12 +73,15 @@ scoops:
     description: "A cli to interact with operating system vaults."
     license: "MIT"
 
-# wingets:
-#   - publisher: frostyeti
-#     package_identifier: "frostyeti.osv"
-#     package_name: "osv"
-#     short_description: "A cli to interact with operating system vaults."
-#     license: "MIT"
+winget:
+  - publisher: frostyeti
+    package_identifier: "frostyeti.osv"
+    short_description: "A cli to interact with operating system vaults."
+    license: "MIT"
+    skip_upload: true
+    repository:
+      owner: frostyeti
+      name: winget-pkgs
 
 chocolateys:
   - name: osv
@@ -82,6 +90,7 @@ chocolateys:
     project_url: "https://github.com/frostyeti/osv"
     description: "A cli to interact with operating system vaults."
     tags: "cli secrets vault password-manager"
+    skip_publish: true
 #   - image_templates:
 #       - "frostyeti/osv:{{ .Version }}"
 #       - "frostyeti/osv:latest"
